[2021.08.15]AdmybrandFriendFinder[Corrections made to handler functions and comments for swagger. Added logger middleware for fiber server]
